修改我的页面，添加购买会员页面

--- a/pages/address/add.wxml
+++ b/pages/address/add.wxml
@@ -38,5 +38,5 @@
 </view>
 
 <view class="toolbar">
-  <button class="toolbar-btn" disabled="{{!can_submit}}" catchtap="saveAddress">保存</button>
+  <button type="primary" style="margin:30rpx;border-radius:10rpx;" disabled="{{!can_submit}}" catchtap="saveAddress">保存</button>
 </view>
