--- a/pages/home/integral.wxml
+++ b/pages/home/integral.wxml
@@ -1,23 +1,18 @@
-<!--pages/home/integral.wxml-->
-<wxs module="filters" src="../../assets/utils.wxs"></wxs>
-
-<view class="balance">
-  <navigator class="balance-helper font-m">使用帮助</navigator>
-  <view class="balance-amount">
-    <text class="amount font-xxl">{{filters.toFix(integral, 2)}}</text>
-    <text class="unit font-m">分</text>
+<view style="position:relative;">
+  <view><image src="/assets/images/bg_mine1.png" class="mine-top-bg"></image></view>
+  <view class="mine-top-nav flex flex-column">
+    <view class="text1">{{ data.amount }}</view>
+    <view>{{ data.desc }}</view>
   </view>
-  <text class="balance-notice font-m">小积分大作用</text>
-</view>
+</view> 
 
-<view class="balance-toolkit">
-  <navigator class="balance-get">领</navigator>
-  <navigator class="balance-consume">花</navigator>
-</view>
-
-<view class="balance-detail">
-  <view class="meta-with-arrow">收支明细</view>
-  <view class="balance-detail-list">
+<view class="cu-list menu">
+  <view class="cu-item">明细：</view>
+  <view class="cu-item flex flex-between" wx:for="{{data.items}}">
+    <view class="flex flex-column" >
+      <view class="text1">{{ item.title }}</view>
+      <view>{{ item.detail }}</view>
+    </view>
+    <view>{{ item.amount }}</view>
   </view>
 </view>
-
