--- a/pages/member/index.wxml
+++ b/pages/member/index.wxml
@@ -1,95 +1,65 @@
-<view class="member-card relative">
-  <view class="member-card-bg absolute"></view>
-  <view class="member-card-1 absolute flex flex-column-r">				
-    <view class="items flex flex-between">
-      <view class="item flex flex-column">
-        <image src="/assets/images/t1.png"></image>
-        <text class="">满减特权</text>
-      </view>
-      <view class="item flex flex-column">
-        <image src="/assets/images/t2.png"></image>
-        <text class="">会员特价</text>
-      </view>
-      <view class="item flex flex-column">
-        <image src="/assets/images/t3.png"></image>
-        <text class="">生日特权</text>
-      </view>
-      <view class="item flex flex-column">
-        <image src="/assets/images/t4.png"></image>
-        <text class="">积分兑换</text>
-      </view>
-      <view class="item flex flex-column">
-        <image src="/assets/images/t5.png"></image>
-        <text class="">积分抵现</text>
-      </view>
-    </view>
-    <view class="item-title">
-    ~ ~ ~ ~ ~ ~ ~ 五大会员特权·永久享用 ~ ~ ~ ~ ~ ~
-    </view>
+<!--pages/product/index.wxml-->
+<view class="header">
+  <view class="search-bar">
+    <icon class="iconfont icon-search"></icon>
+    <input type="text" class="search-input" placeholder="输入关键词" placeholder-class="search-input-placeholder" bindblur="search" value="{{keyword}}"/>
   </view>
-  <view class="member-card-2 absolute flex flex-column flex-between">
-    <view>
-      <view class="mt-20"><text class="text1">好当家会员卡</text></view>
-      <view><text class="text2">成为会员 立即省钱</text></view>
-    </view>
-    <view class="text3">
-      根据用户平均消费计算，会员每年预可省钱￥660
-    </view>
-  </view>				
 </view>
 
-<swiper indicator-dots="{{banner.displayDots}}"
-  autoplay="{{banner.autoplay}}" duration="{{banner.duration}}"
-  interval="{{banner.interval}}"
-  bindchange="bannerChange"
-  >
-  <block wx:for="{{banners}}" wx:key="index">
-    <swiper-item>
-      <image src="{{item.img}}" class="slide-image" style="width:100%;height:100%;" mode="witdhFit" bindload="bannerLoad" bindtap="bannerTap" data-id="{{index}}"/>
-    </swiper-item>
+<!-- 筛选栏 -->
+<view class="filters">
+  <view class="filter {{order == 'star'? 'selected' : ''}}" catchtap="tapFilter" data-order="star">综合</view>
+  <view class="filter {{order == 'sale_count'? 'selected' : ''}}" catchtap="tapFilter" data-order="sale_count">销量</view>
+  <view class="filter {{order == 'add_time'? 'selected' : ''}}" catchtap="tapFilter" data-order="add_time">新品</view>
+  <view class="filter {{order == 'price'? 'selected' : ''}}" catchtap="tapFilter" data-order="price">
+    <text>价格</text>
+    <view class="filter-sort">
+      <text class="filter-sort-up {{sort == 'ASC' ? 'selected' : ''}}"></text>
+      <text class="filter-sort-down {{sort == 'DESC' ? 'selected' : ''}}"></text>
+    </view>
+  </view>
+  <view class="filter" catchtap="switchDisplay">
+    <icon class="iconfont icon-category-{{display}}"></icon>
+  </view>
+</view>
+
+<!-- 产品列表 -->
+<view class="product-{{display}}">
+  <block wx:for="{{products}}" wx:key="id" wx:for-item="product">
+    <template is="{{display == 'grid' ? 'productGrid' : 'productList'}}" data="{{product}}"/>
   </block>
-</swiper>    
+</view>
 
 <wxs module="filters" src="../../assets/utils.wxs"></wxs>
-<view wx:for="{{blocks}}" class="index-block mt-20" wx:key="index">
-  <view data-id="{{item.id}}" catchtap="switchCategory">
-    <image src="{{item.cover}}" mode="widthFix" class="index-block-cover"/>
-  </view>
-  <block wx:if="{{item.products.length%2}}">
-    <!-- 产品总数为单数 -->
-    <view class="index-block-product-single">
-      <navigator url="/pages/product/level?id={{item.products[0].id}}">
-        <image src="{{item.products[0].img}}" class="product-image" mode="widthFix"/>
-        <text class="product-name">{{item.products[0].name}}</text>
-        <text class="product-price">￥{{filters.toFix(item.products[0].price, 2)}}</text>
-      </navigator>
-    </view>
-    <view class="index-block-product-list">
-    <block wx:for="{{item.products}}" wx:for-item="product" wx:key="index">
-      <block wx:if="{{index != 0}}">
-        <template is="productItem" data="{{...product}}"/>
-      </block>
-    </block>
-    </view>
-  </block>
 
-  <block wx:else>
-    <!-- 产品总数为双数 -->
-    <view class="index-block-product-list">
-    <block wx:for="{{item.products}}" wx:for-item="product" wx:key="index">
-        <template is="productItem" data="{{...product}}"/>
-    </block>
-    </view>
-  </block>
-</view>
+<template name="productGrid">
+  <navigator class="product-grid-item" url="/pages/product/detail?id={{product.id}}">
+    <image class="product-image" src="{{product.img}}" mode="widthFix"/>
+    <text class="product-name">{{product.name}}</text>
+    <view class="product-meta">
+      <view class="product-price font-red font-s">
+        <text>￥</text>
+        <text>{{filters.toFix(product.price, 2)}}</text>
+      </view>
 
-<!-- 产品专区产品模板 -->
-<template name="productItem">
-  <view class="index-block-product">
-    <navigator url="/pages/product/detail?id={{id}}">
-      <image src="{{img}}" class="product-image" mode="widthFix"/>
-      <text class="product-name">{{name}}</text>
-      <text class="product-price">￥{{filters.toFix(price, 2)}}</text>
-    </navigator>
-  </view>
+      <button class="product-add-to-cart iconfont icon-cart" data-id="{{product.id}}" catchtap="addToCart"></button>
+    </view>
+  </navigator>
+</template>
+
+<template name="productList">
+  <navigator class="product-list-item" url="/pages/product/detail?id={{product.id}}">
+    <image class="product-image" src="{{product.img}}" mode="widthFix"/>
+    <view class="product-info">
+      <text class="product-name">{{product.name}}</text>
+      <view class="product-meta">
+        <view class="product-price font-red font-s">
+          <text>￥</text>
+          <text>{{filters.toFix(product.price, 2)}}</text>
+        </view>
+
+        <button class="product-add-to-cart iconfont icon-cart" data-id="{{product.id}}" catchtap="addToCart"></button>
+      </view>
+    </view>
+  </navigator>
 </template>
